# vinn

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  layer_benchmarks.cpp  matrix_benchmarks.cpp
bindings/python/: CMakeLists.txt  MANIFEST.in.in  README  requirements.txt  setup.py.in  vinnpy.i
bindings/python/tests/: contexts.py  run_tests.py  test_linear_algebra.py  test_model.py  test_neural_networks.py  test_numpy_integration.py  test_trainers.py
cmake/: ViNNConfig.cmake.in
examples/mnist/: CMakeLists.txt  example_mnist.cpp  get_data.sh
src/: CMakeLists.txt  config.h.in
src/vi/: io.h  la.h  nn.h
src/vi/io/: csv_file.cpp  csv_file.h  deserializer.h  layer_deserializer.cpp  layer_deserializer.h  layer_serializer.cpp  layer_serializer.h  libsvm_file.cpp  libsvm_file.h  model.cpp  model.h  network_deserializer.cpp  network_deserializer.h  network_serializer.cpp  network_serializer.h  serializer.h
src/vi/la/: context.h  matrix.cpp  matrix.h  matrix_implementation.h
src/vi/la/cpu/: cpu_context.cpp  cpu_context.h  cpu_matrix.cpp  cpu_matrix.h
src/vi/la/opencl/: build_result.cpp  build_result.h  disk_source_loader.cpp  disk_source_loader.h  memory_source_loader.cpp  memory_source_loader.h  opencl_builder.cpp  opencl_builder.h  opencl_context.cpp  opencl_context.h  opencl_matrix.cpp  opencl_matrix.h  opencl_ostream.cpp  opencl_ostream.h  source.cpp  source.h  source_loader.h
src/vi/la/opencl/kernels/: activation_functions.cl  convolution.cl  matrix.cl
src/vi/la/opencl/kernels_generated/: activation_functions_cl__source.cpp  activation_functions_cl__source.h  convolution_cl__source.cpp  convolution_cl__source.h  generated_opencl_sources.cpp  generated_opencl_sources.h  matrix_cl__source.cpp  matrix_cl__source.h
src/vi/nn/: activation_function.cpp  activation_function.h  batch_gradient_descent.cpp  batch_gradient_descent.h  confusion_table.cpp  confusion_table.h  cost_function.cpp  cost_function.h  l2_regularizer.cpp  l2_regularizer.h  label_map.cpp  label_map.h  layer.cpp  layer.h  minibatch_gradient_descent.cpp  minibatch_gradient_descent.h  network.cpp  network.h  result_measurements.cpp  result_measurements.h  running_average.cpp  running_average.h  trainer.h
tests/: CMakeLists.txt  activation_function_tests.cpp  confusion_table_tests.cpp  cost_function_tests.cpp  cpu_matrix_tests.cpp  csv_file_tests.cpp  label_map_tests.cpp  layer_deserializer_tests.cpp  layer_serializer_tests.cpp  layer_tests.cpp  libsvm_file_tests.cpp  main.cpp  matrix_tests.cpp  model_tests.cpp  network_deserializer_tests.cpp  network_serializer_tests.cpp  network_tests.cpp  opencl_builder_tests.cpp  opencl_loader_tests.cpp  opencl_source_tests.cpp  result_measurements_tests.cpp  test.cpp  test.h  trainer_tests.cpp
tests/fixtures/: another_kernel.cl  invalid_kernel.cl  kernel.cl  valid.csv  valid.tsv  valid_with_header.csv
vinn.xcodeproj/: project.pbxproj
vinn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
